[package]
name = "deno_url-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.1.3", features = ["derive"] }

[dependencies.deno_url]
path = ".."

[dependencies.serde_v8]
path = "../../../serde_v8"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "url-parse"
path = "fuzz_targets/url-parse.rs"
test = false
doc = false

[profile.release]
debug = true
